<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.AirQualityRankActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_00DEFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_return">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_air_quality_rank"
            android:textColor="@color/white"
            android:textSize="?attr/MediumText" />

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_airRankTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_shade_blue_rc_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_time_air_rank"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/rv_item_air_quality_rank"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_airRankTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_title_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_airRankTitle"
        app:layout_constraintEnd_toStartOf="@+id/tv_center2"
        app:layout_constraintStart_toEndOf="@+id/tv_quater2_1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_title_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_airRankTitle"
        app:layout_constraintEnd_toStartOf="@+id/tv_quater2_1"
        app:layout_constraintStart_toStartOf="@+id/tv_airRankTitle"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_title_aqi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AQI"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_airRankTitle"
        app:layout_constraintEnd_toStartOf="@+id/tv_quater2_2"
        app:layout_constraintStart_toEndOf="@+id/tv_center2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_title_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_airRankTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_quater2_2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_center2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_quater2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_center2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_quater2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_airRankTitle"
        app:layout_constraintStart_toEndOf="@+id/tv_center2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>