<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="@dimen/margin_normal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_clear_day">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_port_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/port_name"
            android:textColor="@color/black"
            android:textSize="?attr/BigText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="港口名：" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/white"
            android:textSize="?attr/BigText"
            app:layout_constraintBottom_toBottomOf="@+id/tv_port_title"
            app:layout_constraintStart_toEndOf="@+id/tv_province_title"
            app:layout_constraintTop_toTopOf="@+id/tv_port_title"
            tools:text="丹东" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_province_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_ex_mini"
            android:text="@string/province_name"
            android:textColor="@color/black"
            android:textSize="?attr/BigText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_port_title"
            tools:text="所在省份：" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/white"
            android:textSize="?attr/BigText"
            app:layout_constraintBottom_toBottomOf="@+id/tv_province_title"
            app:layout_constraintStart_toEndOf="@+id/tv_province_title"
            app:layout_constraintTop_toTopOf="@+id/tv_province_title"
            tools:text="辽宁省" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_ex_mini"
            android:text="@string/location_name"
            android:textColor="@color/black"
            android:textSize="?attr/BigText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_province_title"
            tools:text="经纬度：" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/white"
            android:textSize="?attr/BigText"
            app:layout_constraintBottom_toBottomOf="@+id/tv_location_title"
            app:layout_constraintStart_toEndOf="@+id/tv_water_level_title"
            app:layout_constraintTop_toTopOf="@+id/tv_location_title"
            tools:text="经度：124.4 纬度：40.13" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_water_level_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_ex_mini"
            android:text="@string/water_level_name"
            android:textColor="@color/black"
            android:textSize="?attr/BigText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_title"
            tools:text="水位基准：" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_water_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/white"
            android:textSize="?attr/BigText"
            app:layout_constraintBottom_toBottomOf="@+id/tv_water_level_title"
            app:layout_constraintStart_toEndOf="@+id/tv_water_level_title"
            app:layout_constraintTop_toTopOf="@+id/tv_water_level_title"
            tools:text="150米" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>